# esphome-studio

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Dockerfile  Gemini refinements.md  README.md  START.md  index.html  pyproject.toml  style.css
.github/workflows/: docker.yml  esphome-compile.yml  esphome-config.yml  security.yml
deploy/: README.md  docker-compose.yml  k8s.yaml  nginx.conf
docs/: deployment.md  index.md  integrations.md  library-coverage.md  mcp.md  user_guide.md
examples/: awning-control.json  bluemotion.json  desk-climate.json  esp32-audio.json  keypad.json  oled.json  parking-distance.json  wasserpir.json
schema/: design.schema.json
scripts/: check_examples.py  coverage_matrix.py
studio/: library.py
studio/agent/: agent.py  tools.py
studio/api/: __main__.py  app.py  schemas.py  serve.py
studio/csp/: __init__.py  compatibility.py  pin_solver.py
studio/designs/: __init__.py  store.py
studio/enclosure/: __init__.py  search.py
studio/fleet/: __init__.py  client.py
studio/generate/: yaml_gen.py
studio/kicad/: __init__.py  generator.py
studio/recommend/: __init__.py  recommender.py
tests/: conftest.py  test_agent.py  test_api.py  test_ascii_gen.py  test_compatibility.py  test_design_events.py  test_designs.py  test_enclosure.py  test_enclosure_search.py  test_fleet.py  test_jlcpcb.py  test_kicad.py  test_mcp_auth.py  test_mcp_resources.py  test_mcp_server.py  test_pin_solver.py  test_recommend.py  test_schema.py  test_security_cors.py  test_serve.py  test_yaml_gen.py
tests/golden/: awning-control.txt  awning-control.yaml  bl0906-mainmeter.txt  bl0906-mainmeter.yaml  bluemotion.txt  bluemotion.yaml  desk-climate.txt  desk-climate.yaml  desk-matrix.txt  desk-matrix.yaml  esp32-audio.yaml  keypad.txt  keypad.yaml  nextion-thermostat.txt  nextion-thermostat.yaml  oled.txt  oled.yaml  parking-distance.txt  parking-distance.yaml  room-climate.txt  room-climate.yaml  rs485-energy.txt  rs485-energy.yaml  smart-plug-v1.txt  smart-plug-v1.yaml  smart-plug.txt  smart-plug.yaml  tuya-smart-plug.txt  tuya-smart-plug.yaml  wasserpir.txt  wasserpir.yaml
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
wirestudio/: __init__.py  library.py  model.py  validate.py
wirestudio/agent/: __init__.py  agent.py  session.py  tools.py
wirestudio/api/: __init__.py  __main__.py  app.py  schemas.py  serve.py
wirestudio/csp/: __init__.py  compatibility.py  pin_solver.py
wirestudio/designs/: __init__.py  events.py  store.py
wirestudio/enclosure/: __init__.py  (+1 more)
(+59 files in other folders)
