[build-system]
# Pin upper bound to keep PEP 639 license-expression metadata out of
# the wheel until twine catches up; setuptools 75+ emits new metadata
# fields that current twine releases reject during `twine check`.
requires = ["setuptools>=68,<75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wirestudio"
version = "0.10.0"
description = "Agent-driven IoT device design tool that produces ESPHome YAML."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "wirestudio contributors" }]
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "jsonschema>=4.21",
    "jinja2>=3.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "anthropic>=0.40",
    "httpx>=0.27",
    "slowapi>=0.1.9",
    "mcp>=1.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
wirestudio-generate = "wirestudio.generate.__main__:main"
wirestudio-api = "wirestudio.api.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["wirestudio*"]

[tool.setuptools.package-data]
# Bundled library YAMLs, JSON schema, and example designs ride inside
# the wirestudio package so they ship in the wheel; without this, a
# pip-installed wirestudio crashes at runtime when default_library()
# tries to read components/ + boards/.
"wirestudio.library" = ["components/*.yaml", "boards/*.yaml"]
"wirestudio.schema" = ["*.json"]
"wirestudio.examples" = ["*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
